--- a/parallalax.css
+++ b/parallalax.css
@@ -13,7 +13,7 @@ line-height: 1.8em;
 }
 
 .pimg1{
-	background-image: url("image/img1.jfif");
+	background-image: url("img1.jfif");
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -21,7 +21,7 @@ line-height: 1.8em;
 }
 
 .pimg2{
-	background-image: url("image/img2.jfif");
+	background-image: url("img2.jfif");
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -29,7 +29,7 @@ line-height: 1.8em;
 }
 
 .pimg3{
-	background-image: url("image/img3.jfif");
+	background-image: url("img3.jfif");
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -37,7 +37,7 @@ line-height: 1.8em;
 }
 
 .pimg4{
-	background-image: url("image/img4.jfif");
+	background-image: url("img4.jfif");
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
