--- a/parallalax.css
+++ b/parallalax.css
@@ -29,7 +29,7 @@ line-height: 1.8em;
 }
 
 .pimg3{
-	background-image: url("img3.png");
+	background-image: url("img3.jpg");
 	height: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -37,7 +37,7 @@ line-height: 1.8em;
 }
 
 .pimg4{
-	background-image: url("img4.png");
+	background-image: url("img4.jpg");
 	height: 100%; 
 	background-position: center;
 	background-repeat: no-repeat;
